# Proyecto1

./: CMakeLists.txt  LICENSE  Makefile  README.md  gen_exe.sh  puntos.txt
.github/workflows/: cmake.yml
include/: .Punto.hh.swp  CGALBridge.hpp  Punto.hh  Util.hh
src/: .Proyecto1.cpp.swp  .Punto.cpp.swp  .test2.cpp.swp  Proyecto1.cpp  Punto.cpp
test/: README  exe  simple.cpp  test.cpp  test2.cpp  voronoi.cpp
